# Q4_AgenticAI_ClassWorking

./: README.md
ClassAssignments/Class02_30052025/: README.md  chatbot.py  pyproject.toml
ClassAssignments/Class_02_30052025/: main.py
ClassAssignments/Class_04_10072025/Ristay_Wali_Aunty/: README.md  browser.py  main.py  pyproject.toml  whatsapp.py
ClassWork/Class_02_30052025/CLI_Based_Agent/: app.py
ClassWork/Class_03_20062025/chainlit_agent/: README.md  main.py  pyproject.toml
ClassWork/Class_04_10072025/colab/: Tools_in_OpenAI_Agents_SDK_.ipynb
ClassWork/Class_04_10072025/run_streamed/: README.md  main.py  pyproject.toml  streaming.py
ClassWork/Class_05_18072025/Agentic_RAG/: RAG_Embedding.md
ClassWork/Class_05_18072025/Agentic_RAG/Colab/: Embedding_File_Search_Tool_.ipynb
ClassWork/Class_05_18072025/Agentic_RAG/VS_Code/: embedding.py  pyproject.toml
ClassWork/Class_05_18072025/Hand_off/: main.py  pyproject.toml
ClassWork/Class_06_25072025/: Guardrail.md  main.py  pyproject.toml
ClassWork/Class_07_01082025/: Readme.md
ClassWork/Class_08_08082025/: Readme.md
ClassWork/Class_08_08082025/agent_hook/: .env  advance.py  basic.py  pyproject.toml
ClassWork/Class_08_08082025/model_setting/: max_token.py  parallel_toolcall.py  penalties.py  pyproject.toml  temp.py  tool_choice.py  top_p.py
ClassWork/Class_08_08082025/runner_hook/: advance.py  basic.py  pyproject.toml
ClassWork/Class_09_22082025/cloning/: main.py  pyproject.toml
Class_02_30052025/CLI_Based_Agent/: README.md  pyproject.toml
Class_02_30052025/Colab_Working/: Readme.md
(+1 files in other folders)
