[project]
name = "cli-based-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "OsamabinAdnan", email = "binadnanosama@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.0.16",
    "python-dotenv>=1.1.0",
]

[project.scripts]
cli-based-agent = "cli_based_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
